crates/mir/tests/fixtures/errors/return_borrow_call_overlap.snap
---
source: crates/mir/tests/lowering_errors.rs
assertion_line: 27
expression: err.to_string()
input_file: tests/fixtures/errors/return_borrow_call_overlap.fe
---
error[10-0002]: borrow conflict in `fn return_borrow_call_overlap`
   ┌─ return_borrow_call_overlap.fe:13:5
   │
12 │     let p: mut u256 = borrow_a(mut s)
   │                       --------------- borrow created here
13 │     let q: mut u256 = mut s.a
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^ cannot mutably borrow this place while a mut borrow is active
